--- a/cart/templates/cart/cart-summary.html
+++ b/cart/templates/cart/cart-summary.html
@@ -3,6 +3,7 @@
 
 {% load static %}
 
+{% load mathfilters %}
 
 {% block content %}
 
@@ -14,23 +15,26 @@
       <h1 class="h5"> Shopping cart </h1>
 
 	<hr>
-      
+
+  {% for item in cart %}
+  {% with product=item.product %}
+
       <br>
 
       <div class="row mb-4 border product-item">
         
         <div class="col-md-3 col-lg-2 order-md-first bg-light">
         
-            <img class="img-fluid mx-auto d-block" width="200px" alt="Responsive image" src=""> <!-- Product image -->
+            <img class="img-fluid mx-auto d-block" width="200px" alt="Responsive image" src="{{product.image.url}}"> <!-- Product image -->
         
         </div>
 
         
         <div class="col-md-9 col-lg-10 ps-md-3 ps-lg-10">
           
-          <a href="" class="text-decoration-none text-reset"> <!-- Product get absolute url -->
+          <a href="{{product.get_absolute_url}}" class="text-decoration-none text-reset"> <!-- Product get absolute url -->
           
-            <h1 class="h5 pt-2"> <!-- Product title --> </h1>
+            <h1 class="h5 pt-2"> {{product.title}} </h1>
           
           </a>
           
@@ -42,7 +46,7 @@
               
                 <div class="col-6"> Product </div>
               
-                <div class="col-6 text-end"><span class="h6 fw-bold">$ <!-- Product price --> </span></div>
+                <div class="col-6 text-end"><span class="h6 fw-bold">$ {{product.price|mul:item.qty}}</span></div>
             
               </div>
             
@@ -78,7 +82,7 @@
                   
                   <br> <br>
 
-                  <button type="button" id="update-button"
+                  <button type="button" id="update-button" data-index="{{product.id}}"
                     class="btn btn-primary btn-sm update-button">
                     Update
                   
@@ -86,7 +90,7 @@
                   
                   &nbsp;
 
-                  <button type="button" id="delete-button"
+                  <button type="button" id="delete-button" data-index="{{product.id}}"
                     class="btn btn-danger btn-sm delete-button">
                     Delete
         
@@ -105,17 +109,19 @@
       
     </div>
       
-
+    {% endwith %}
+    {% endfor %}
 
       <div class="col-12 text-end">
  
-        <div class="h6 fw-bold"> Sub total: $ <div id="subtotal" class="d-inline-flex"> <!-- cart.get_total --> </div></div>
+        <div class="h6 fw-bold"> Sub total: $ <div id="subtotal" class="d-inline-flex"> {{cart.get_total}} </div></div>
  
       </div>
  
 
     </div>
   
+    <br>
 
  </main>
 
