--- a/cart/templates/cart/cart-summary.html
+++ b/cart/templates/cart/cart-summary.html
@@ -62,7 +62,7 @@
 
                   &nbsp; 
                   
-                  <select id="">
+                  <select id="select{{product.id}}">
                   
                     <option selected>
                   
@@ -125,7 +125,74 @@
 
  </main>
 
+ <script>
+  $(document).on('click','#delete-button',function(e){
+      e.preventDefault();
+      $.ajax({
+          type: 'POST',
+          url: '{% url "cart-delete" %}',
+          data: {
+              product_id: $(this).data('index'),
+              csrfmiddlewaretoken: "{{csrf_token}}",
+              action: 'post'
+          },
+          success: function(json){
 
+              location.reload();
+              document.getElementById("cart-qty").textContent= json.qty
+              document.getElementById("total").textContent= json.total
+          },
+          error: function(xhr, errmsg, err){
+
+          }
+      });
+  })
+
+  $(document).on('click', '.update-button', function(e){
+
+e.preventDefault();
+
+var theproductid = $(this).data('index');
+
+$.ajax({
+
+    type: 'POST',
+    url: '{% url "cart-update" %}',
+    data: {
+
+        product_id: $(this).data('index'),
+        product_quantity: $('#select' + theproductid + ' option:selected').text(),
+        csrfmiddlewaretoken: "{{csrf_token}}",
+        action: 'post'
+
+    },
+
+    success: function(json){
+
+        //console.log(json)
+
+        location.reload();
+        
+
+        document.getElementById("cart-qty").textContent = json.qty
+
+        document.getElementById("total").textContent = json.total
+
+
+    },
+
+    error: function(xhr, errmsg, err){
+
+
+    }
+
+});
+
+
+})
+
+
+</script>
 
 {% endblock %}
 
