--- a/account/templates/account/dashboard.html
+++ b/account/templates/account/dashboard.html
@@ -1,2 +1,48 @@
-<h1>This is dashboard</h1>
-<a class="btn btn-alert navbar-btn text-white" type="button"  href="{% url 'user-logout' %}"> Logout </a>
+
+{% include "store/base.html" %}
+{% load static %}
+
+{% load crispy_forms_tags %}
+{% block content %}
+<style>
+    body{
+        background-color: gray;
+    }
+</style>
+    <body>
+
+        <br>
+
+        <div class="container bg-white shadow-md p-5 form-layout">
+
+            <h5> Welcome {{user}}</h5>
+
+            <hr>
+            <p> This is dashboard where you can perform any of the following:</p>
+            
+            <li>Track your orders</li>
+            <li>Manage your account</li>
+            
+            <br>
+            <br>
+
+            
+        </div>
+        <br>
+        <div class="container bg-white shadow-md p-5 form-layout">
+            
+            <h4>Track your order</h4>
+            <a class="btn btn-primary btn-md text-white" type="button" href="{% url 'user-logout' %}">My order</a>
+        </div>
+        <br>
+        <div class="container bg-white shadow-md p-5 form-layout">
+            
+            <h4>Manage your account</h4>
+            <a class="btn btn-primary btn-md text-white" type="button" href="{% url 'profile-management' %}">Profile management</a>
+            <br><br>
+            <a class="btn btn-danger btn-md text-white" type="button" href="{% url 'user-logout' %}">Logout</a>
+        
+    </body>
+    <br><br>
+
+{% endblock%}
