--- a/account/templates/account/my-login.html
+++ b/account/templates/account/my-login.html
@@ -21,12 +21,15 @@
                 {% csrf_token %}
                 {{form.username|as_crispy_field}}
 
-                <br> <br>
-
                 {{form.password|as_crispy_field}}
-
+                <br>
+                <button type="submit" class="btn btn-primary navbar-btn text-white w-100 p-2"><i class="fa fa-key" aria-hidden="true"></i>&nbsp; Log in</button>
                 <br><br>
-                <button type="submit" class="btn btn-secondary btn-lg w-100 btn-block p-2">&nbsp; Log in</button>
+                <div class="text-center">
+                    <a href="{% url 'register'%}">Don't have an account?</a>
+                    <br><br>
+                    <a href="{% url 'my-login'%}">Forgotten your password?</a>
+                </div>
             </form>
 
 
