--- a/account/templates/account/profile-management.html
+++ b/account/templates/account/profile-management.html
@@ -12,6 +12,12 @@
     <body>
 
         <br>
+        <div class="container bg-white shadow-md p-5 form-layout">
+            <h4><i class="fa fa-address-book"></i>&nbsp; Profile management</h4>
+            <hr>
+           
+        </div>
+        <br>
 
         <div class="container bg-white shadow-md p-5 form-layout">
 
@@ -21,12 +27,10 @@
                 {% csrf_token %}
                 {{user_form.username|as_crispy_field}}
 
-                <br> <br>
-
                 {{user_form.email|as_crispy_field}}
 
-                <br><br>
-                <button type="submit" class="btn btn-secondary btn-lg w-100 btn-block p-2">&nbsp; Update your account</button>
+                <br>
+                <button type="submit" class="btn btn-primary btn-md text-white">&nbsp; Update your account</button>
             </form>
 
 
