--- a/account/templates/account/registration/register.html
+++ b/account/templates/account/registration/register.html
@@ -37,7 +37,11 @@
 
                 {{form.password2|as_crispy_field}}
                 <br><br>
-                <button type="submit" class="btn btn-secondary btn-lg w-100 btn-block p-2">&nbsp; Create account</button>
+                <button type="submit"class="btn btn-primary navbar-btn text-white w-100 p-2">&nbsp; Create account</button>
+                <br><br>
+                <div class="text-center">
+                    <a href="{% url 'my-login'%}">Already have account?</a>
+                </div>
             </form>
 
 
