--- a/store/templates/store/base.html
+++ b/store/templates/store/base.html
@@ -105,19 +105,36 @@
             
             <ul class="navbar-nav ms-auto">
 
+                {% if user.is_authenticated %}
 
+                <li class="nav-item">
+            
+                    <a class="btn btn-alert navbar-btn text-white" type="button"  href="{% url 'dashboard' %}"> Deshboard </a>
+
+                </li>
+                {% else %}
                 <li class="nav-item">
             
                     <a class="btn btn-alert navbar-btn text-white" type="button"  href="{% url 'register' %}"> Register </a>
 
                 </li>
 
+                {% endif %}
 
+                {% if user.is_authenticated %}
+
+                <li class="nav-item">
+
+                    <a class="btn btn-alert navbar-btn text-white" type="button"  href="{% url 'user-logout' %}"> Logout </a>
+
+                </li>
+                {% else %}
                 <li class="nav-item">
 
                     <a class="btn btn-alert navbar-btn text-white" type="button"  href="{% url 'my-login' %}"> Login </a>
 
                 </li>
+                {% endif %}
 
 
                 &nbsp; &nbsp; &nbsp;
