--- a/account/templates/account/my-login.html
+++ b/account/templates/account/my-login.html
@@ -15,7 +15,7 @@
 
         <div class="container bg-white shadow-md p-5 form-layout">
 
-            <h5> Log in </h5>
+            <h2> Log in to your account</h2>
             <br>
             <form method="POST" autocomplete="off">
                 {% csrf_token %}
@@ -28,7 +28,7 @@
                 <div class="text-center">
                     <a href="{% url 'register'%}">Don't have an account?</a>
                     <br><br>
-                    <a href="{% url 'my-login'%}">Forgotten your password?</a>
+                    <a href="{% url 'reset-password'%}">Forgotten your password?</a>
                 </div>
             </form>
 
