--- a/account/templates/account/my-login.html
+++ b/account/templates/account/my-login.html
@@ -25,6 +25,9 @@
                 <br>
                 <button type="submit" class="btn btn-primary navbar-btn text-white w-100 p-2"><i class="fa fa-key" aria-hidden="true"></i>&nbsp; Log in</button>
                 <br><br>
+
+                {{form.non_field_errors}}
+
                 <div class="text-center">
                     <a href="{% url 'register'%}">Don't have an account?</a>
                     <br><br>
