--- a/store/templates/store/base.html
+++ b/store/templates/store/base.html
@@ -179,6 +179,23 @@
 
     </nav>
 
+    {% for message in messages %}
+        {% if message.level == DEFAULT_MESSAGE_LEVELS.SUCCESS %}
+            <h6 id="message-timer" class="alert alert-success text-center">{{message}}</h6>
+        {% endif %}
+    {% endfor %}
+
+    {% for message in messages %}
+        {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}
+            <h6 id="message-timer" class="alert alert-danger text-center">{{message}}</h6>
+        {% endif %}
+    {% endfor %}
+
+    {% for message in messages %}
+    {% if message.level == DEFAULT_MESSAGE_LEVELS.INFO %}
+        <h6 id="message-timer" class="alert alert-info text-center">{{message}}</h6>
+    {% endif %}
+    {% endfor %}
 
     <body>
 
@@ -199,7 +216,7 @@
 
     </body>
 
-
+    <script src="{% static 'js/app.js' %}"></script>
 </html>
 
 
