--- a/store/templates/store/base.html
+++ b/store/templates/store/base.html
@@ -125,7 +125,7 @@
 
                 <li class="nav-item">
 
-                    <a class="btn btn-alert navbar-btn text-white" type="button"  href="{% url 'user-logout' %}"> Logout </a>
+                    <a class="btn btn-alert navbar-btn text-white" type="button"  href="{% url 'user-logout' %}"><i class="fa fa-sign-out" aria-hidden="true"></i>&nbsp; Logout </a>
 
                 </li>
                 {% else %}
@@ -181,19 +181,19 @@
 
     {% for message in messages %}
         {% if message.level == DEFAULT_MESSAGE_LEVELS.SUCCESS %}
-            <h6 id="message-timer" class="alert alert-success text-center">{{message}}</h6>
+            <h6 id="message-timer" class="alert alert-success text-center"><i class="fa fa-sign-out" aria-hidden="true"></i>&nbsp; {{message}}</h6>
         {% endif %}
     {% endfor %}
 
     {% for message in messages %}
         {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}
-            <h6 id="message-timer" class="alert alert-danger text-center">{{message}}</h6>
+            <h6 id="message-timer" class="alert alert-danger text-center"><i class="fa fa-exclamation-triangle" aria-hidden="true"></i>&nbsp; {{message}}</h6>
         {% endif %}
     {% endfor %}
 
     {% for message in messages %}
     {% if message.level == DEFAULT_MESSAGE_LEVELS.INFO %}
-        <h6 id="message-timer" class="alert alert-info text-center">{{message}}</h6>
+        <h6 id="message-timer" class="alert alert-info text-center"><i class="fa fa-check-circle" aria-hidden="true"></i>&nbsp; {{message}}</h6>
     {% endif %}
     {% endfor %}
 
